# Wheeler-language-recognizer

./: .gitmodules  CMakeLists.txt  LICENSE  Makefile  README.md  compile.py  wheeler_lan_rec.py
CMakeModules/: ConfigureCompilerGcc.cmake
data/: regexp.dfa
internal/: automaton.hpp  prune_min_dfa.cpp  wheeler-language-recognizer.cpp
